@@ -19,6 +19,7 @@ MovieJukebox 2.1 BETA
   - Enhancement  #1526 Ability for multiple IMDB Ids in a NFO file
   - Enhancement  #1530 banner from thetvdb
   - Fixed defect #1531 java.util.NoSuchElementException on most movies
+  - Fixed defect #1541 Poster english or french
   - Fixed defect #1545 Failed creating thumbnail with Set or Series
   - Fixed defect #1547 KinoPoisk's plugin is malfunction
   - Fixed defect #1549 All movies now seen as new even when re-run
